--- a/styles/architects.css
+++ b/styles/architects.css
@@ -14,6 +14,9 @@
 .display-flex {
     display: flex;
 }
+.text-primary {
+    color: #FF900E;
+}
 .text-gray {
     color: #424242;
 }
@@ -32,6 +35,14 @@
     border-radius: 8px;
     border: none;
     
+}
+
+main{
+    max-width: 1440px ;
+    margin: 0 auto;
+}
+main > section{
+   margin-top: 130px;
 }
 
 /* header styles */
@@ -81,11 +92,54 @@
 .banner-image{
     width: 100%;
 }
+/* teams and feature related style */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+#quick-list{
+    font-weight: 500;
+}
+
+.feature-title{
+    font-weight: 700;
+    font-size: 2.8rem;
+    
+}
+
+
+
 
 /* responsive media query */
  @media screen and (max-width: 576px){
-    .navber, .nav-links{
-        flex-direction: column
+    .navber,
+    .nav-links,
+    .teams{
+        flex-direction: column;
     }
- };
-    
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+        
+    }
+ }
+    /* medium size device */
+
+    @media screen and (min-width: 576px) and (max-width : 992px){
+        .teams{
+            flex-direction: column;
+        }
+        .our-features{
+            margin: 50px auto;
+        }
+    }
