--- a/styles/architects.css
+++ b/styles/architects.css
@@ -44,6 +44,11 @@ main{
 main > section{
    margin-top: 130px;
 }
+.section-title{
+    font-weight: 700;
+    font-size: 2.8rem;
+    
+}
 
 /* header styles */
 
@@ -109,11 +114,7 @@ main > section{
     font-weight: 500;
 }
 
-.feature-title{
-    font-weight: 700;
-    font-size: 2.8rem;
-    
-}
+
 
 
 
