experinence added and respoonsive

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -134,6 +134,21 @@ main > section{
     margin-bottom: 0px;
    
 }
+#experinece-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.featured-architect img{
+    width: 100%;
+    
+}
 
 /* some our facts related styles  */
 .fact-description{
@@ -189,6 +204,7 @@ main > section{
  @media screen and (max-width: 576px){
     .navber,
     .nav-links,
+    .features
     .teams{
         flex-direction: column;
     }
@@ -211,11 +227,15 @@ main > section{
         margin-left: 20px;
         
     }
+    #experinece-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
  }
     /* medium size device */
 
     @media screen and (min-width: 576px) and (max-width : 992px){
-        .teams{
+        .teams, .features{
             flex-direction: column;
         }
         .our-features{
@@ -226,5 +246,9 @@ main > section{
             gap: 50px;
             justify-items: center;
         }
+        #experinece-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
     }
 
